[package]
name = "actor-implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
rand = "0.8.5"
tokio = { version = "1.39.2", features = ["full"] }
